# baba-yaga

./: .env.example  .gitignore  eval-baseline.json  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt  .temp_test_run_data.json
.github/skills/nextjs-api-from-spec/: SKILL.md
.github/skills/nextjs-api-from-spec/tests/: ecommerce.yaml  eval_skill.py  malformed.yaml  minimal.yaml  pet-store.yaml
scripts/: analyze_sessions.py  example_hypothesis.py  example_pytest.py  golden_eval.py  layer1_deterministic.py  trajectory_eval.py
scripts/layers/: 02-model-graded.py  03-property-based.py  05-statistical-sampling.py  06-human-review.py
scripts/skills/: test_openapi_client_generator.py
scripts/tools/: example_braintrust.py  example_deepeval.py  example_promptfoo.yaml  example_toolcallcheck.py
src/: eval.py  llm.py
src/baba_yaga.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_llm.py
