[project]
name = "baba-yaga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=4.0.7",
    "langchain-aws",
    "langchain-groq",
    "langchain-openai",
    "python-dotenv",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm"]
package-dir = {"" = "src"}
